k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo
  labels:
    app.kubernetes.io/name: devops-demo
    app.kubernetes.io/managed-by: helm
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
