k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo
  namespace: devops-demo
  labels:
    app.kubernetes.io/name: devops-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/rate-limit-connections: "5"
    nginx.ingress.kubernetes.io/rate-limit-rps: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: devops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo
                port:
                  name: http
